Bug 574188 - Add UI hooks to trigger tab candy
UltraBlame original commit: 700bdb4697790e9df7e99143f64a98b3831c9e51

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -170,6 +170,27 @@ menu
 <
 !
 ENTITY
+newTab
+.
+label
+"
+New
+Tab
+"
+>
+<
+!
+ENTITY
+newTab
+.
+accesskey
+"
+N
+"
+>
+<
+!
+ENTITY
 reloadTab
 .
 label
@@ -254,52 +275,6 @@ openTabInNewWindow
 accesskey
 "
 W
-"
->
-<
-!
-ENTITY
-pinTab
-.
-label
-"
-Make
-into
-App
-Tab
-"
->
-<
-!
-ENTITY
-pinTab
-.
-accesskey
-"
-p
-"
->
-<
-!
-ENTITY
-unpinTab
-.
-label
-"
-Make
-into
-Normal
-Tab
-"
->
-<
-!
-ENTITY
-unpinTab
-.
-accesskey
-"
-k
 "
 >
 <
@@ -1225,18 +1200,6 @@ page
 <
 !
 ENTITY
-backForwardItem
-.
-title
-"
-Back
-/
-Forward
-"
->
-<
-!
-ENTITY
 locationItem
 .
 title
@@ -1292,6 +1255,31 @@ homeButton
 label
 "
 Home
+"
+>
+<
+!
+ENTITY
+tabCandyButton
+.
+label
+"
+TabCandy
+"
+>
+<
+!
+ENTITY
+tabCandyButton
+.
+tooltip
+"
+Open
+a
+visual
+tab
+interface
+.
 "
 >
 <
@@ -1662,28 +1650,29 @@ j
 <
 !
 ENTITY
-webConsoleCmd
+hudConsoleCmd
 .
 label
 "
-Web
-Console
+Heads
+Up
+Display
 "
 >
 <
 !
 ENTITY
-webConsoleCmd
+hudConsoleCmd
 .
 accesskey
 "
-W
+U
 "
 >
 <
 !
 ENTITY
-webConsoleCmd
+hudConsoleCmd
 .
 commandkey
 "
@@ -1718,106 +1707,6 @@ inspectMenu
 commandkey
 "
 I
-"
->
-<
-!
-ENTITY
-inspectPanelTitle
-.
-label
-"
-HTML
-"
->
-<
-!
-ENTITY
-inspectButton
-.
-label
-"
-Inspect
-"
->
-<
-!
-ENTITY
-inspectButton
-.
-accesskey
-"
-I
-"
->
-<
-!
-ENTITY
-inspectNextButton
-.
-label
-"
-Next
-"
->
-<
-!
-ENTITY
-inspectNextButton
-.
-accesskey
-"
-N
-"
->
-<
-!
-ENTITY
-inspectPreviousButton
-.
-label
-"
-Previous
-"
->
-<
-!
-ENTITY
-inspectPreviousButton
-.
-accesskey
-"
-P
-"
->
-<
-!
-ENTITY
-inspectStyleButton
-.
-label
-"
-Style
-"
->
-<
-!
-ENTITY
-inspectStyleButton
-.
-accesskey
-"
-S
-"
->
-<
-!
-ENTITY
-inspectStylePanelTitle
-.
-label
-"
-Style
 "
 >
 <
@@ -2275,6 +2164,26 @@ V
 <
 !
 ENTITY
+showTabCandy
+.
+label
+"
+TabCandy
+"
+>
+<
+!
+ENTITY
+showTabCandy
+.
+commandkey
+"
+E
+"
+>
+<
+!
+ENTITY
 viewToolbarsMenu
 .
 label
@@ -2495,16 +2404,6 @@ appMenuHelp
 label
 "
 Help
-"
->
-<
-!
-ENTITY
-developerMenu
-.
-label
-"
-Developer
 "
 >
 <
@@ -2777,30 +2676,6 @@ j
 <
 !
 ENTITY
-openLinkCmdInTab
-.
-label
-"
-Open
-Link
-in
-New
-Tab
-"
->
-<
-!
-ENTITY
-openLinkCmdInTab
-.
-accesskey
-"
-T
-"
->
-<
-!
-ENTITY
 openLinkCmd
 .
 label
@@ -2846,12 +2721,12 @@ O
 <
 !
 ENTITY
-openFrameCmdInTab
+openLinkCmdInTab
 .
 label
 "
 Open
-Frame
+Link
 in
 New
 Tab
@@ -2860,7 +2735,7 @@ Tab
 <
 !
 ENTITY
-openFrameCmdInTab
+openLinkCmdInTab
 .
 accesskey
 "
@@ -2889,6 +2764,30 @@ openFrameCmd
 accesskey
 "
 W
+"
+>
+<
+!
+ENTITY
+openFrameCmdInTab
+.
+label
+"
+Open
+Frame
+in
+New
+Tab
+"
+>
+<
+!
+ENTITY
+openFrameCmdInTab
+.
+accesskey
+"
+T
 "
 >
 <
@@ -3689,6 +3588,16 @@ copyAudioURLCmd
 accesskey
 "
 o
+"
+>
+<
+!
+ENTITY
+blockImageCmd
+.
+accesskey
+"
+B
 "
 >
 <
@@ -4981,199 +4890,5 @@ label
 "
 Browser
 tabs
-"
->
-<
-!
--
--
-LOCALIZATION
-NOTE
-(
-syncTabsMenu
-.
-label
-)
-:
-This
-appears
-in
-the
-history
-menu
--
--
->
-<
-!
-ENTITY
-syncTabsMenu
-.
-label
-"
-Tabs
-From
-Other
-Computers
-"
->
-<
-!
-ENTITY
-syncBrand
-.
-shortName
-.
-label
-"
-Sync
-"
->
-<
-!
-ENTITY
-syncMenu
-.
-label
-"
-&
-syncBrand
-.
-shortName
-.
-label
-;
-"
->
-<
-!
--
--
-LOCALIZATION
-NOTE
-(
-sync
-.
-menu
-.
-accesskey
-)
-:
-This
-is
-part
-of
-the
-tools
-menu
-so
-don
-'
-t
-use
-a
-conflicting
-access
-key
--
--
->
-<
-!
-ENTITY
-syncMenu
-.
-accesskey
-"
-Y
-"
->
-<
-!
-ENTITY
-syncSetup
-.
-label
-"
-Set
-Up
-&
-syncBrand
-.
-shortName
-.
-label
-;
-"
->
-<
-!
-ENTITY
-syncSetup
-.
-accesskey
-"
-Y
-"
->
-<
-!
-ENTITY
-syncLogInItem
-.
-label
-"
-Connect
-"
->
-<
-!
-ENTITY
-syncLogInItem
-.
-accesskey
-"
-C
-"
->
-<
-!
-ENTITY
-syncLogOutItem
-.
-label
-"
-Disconnect
-"
->
-<
-!
-ENTITY
-syncLogOutItem
-.
-accesskey
-"
-D
-"
->
-<
-!
-ENTITY
-syncSyncNowItem
-.
-label
-"
-Sync
-Now
-"
->
-<
-!
-ENTITY
-syncSyncNowItem
-.
-accesskey
-"
-S
 "
 >
