--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -134,6 +134,13 @@ contextMenuSearchText
 accesskey
 =
 S
+blockImages
+=
+Block
+Images
+from
+%
+S
 #
 bookmark
 dialog
@@ -403,6 +410,8 @@ addonError
 addonError
 -
 4
+addonErrorIncompatible
+addonErrorBlocklisted
 )
 :
 #
@@ -506,128 +515,6 @@ be
 corrupt
 .
 addonError
--
-4
-=
-#
-1
-could
-not
-be
-installed
-because
-#
-3
-cannot
-modify
-the
-needed
-file
-.
-#
-LOCALIZATION
-NOTE
-(
-addonLocalError
--
-1
-addonLocalError
--
-2
-addonLocalError
--
-3
-addonLocalError
--
-4
-addonErrorIncompatible
-addonErrorBlocklisted
-)
-:
-#
-#
-1
-is
-the
-add
--
-on
-name
-#
-3
-is
-the
-application
-name
-#
-4
-is
-the
-application
-version
-addonLocalError
--
-1
-=
-This
-add
--
-on
-could
-not
-be
-installed
-because
-of
-a
-filesystem
-error
-.
-addonLocalError
--
-2
-=
-This
-add
--
-on
-could
-not
-be
-installed
-because
-it
-does
-not
-match
-the
-add
--
-on
-#
-3
-expected
-.
-addonLocalError
--
-3
-=
-This
-add
--
-on
-could
-not
-be
-installed
-because
-it
-appears
-to
-be
-corrupt
-.
-addonLocalError
 -
 4
 =
@@ -873,6 +760,39 @@ Show
 %
 S
 '
+imageBlockedWarning
+=
+%
+S
+will
+now
+always
+block
+images
+from
+%
+S
+.
+imageAllowedWarning
+=
+%
+S
+will
+now
+allow
+images
+from
+%
+S
+.
+undo
+=
+Undo
+undo
+.
+accessKey
+=
+U
 #
 missing
 plugin
@@ -2476,6 +2396,17 @@ addKeywordTitleAutoFill
 Search
 %
 S
+#
+Tab
+Candy
+tabCandy
+.
+title
+=
+%
+S
+Tab
+Sets
 extensions
 .
 {
