Bug 581732 - Merge mozilla-central to tabcandy-central 2010/07/24 (with conflicts).
UltraBlame original commit: d15251ad8da814f7c0d56e2cd4595bed7f8bfe72

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -170,27 +170,6 @@ menu
 <
 !
 ENTITY
-newTab
-.
-label
-"
-New
-Tab
-"
->
-<
-!
-ENTITY
-newTab
-.
-accesskey
-"
-N
-"
->
-<
-!
-ENTITY
 reloadTab
 .
 label
@@ -1695,29 +1674,28 @@ j
 <
 !
 ENTITY
-hudConsoleCmd
+webConsoleCmd
 .
 label
 "
-Heads
-Up
-Display
+Web
+Console
 "
 >
 <
 !
 ENTITY
-hudConsoleCmd
+webConsoleCmd
 .
 accesskey
 "
-U
+W
 "
 >
 <
 !
 ENTITY
-hudConsoleCmd
+webConsoleCmd
 .
 commandkey
 "
@@ -2801,6 +2779,30 @@ j
 <
 !
 ENTITY
+openLinkCmdInTab
+.
+label
+"
+Open
+Link
+in
+New
+Tab
+"
+>
+<
+!
+ENTITY
+openLinkCmdInTab
+.
+accesskey
+"
+T
+"
+>
+<
+!
+ENTITY
 openLinkCmd
 .
 label
@@ -2846,12 +2848,12 @@ O
 <
 !
 ENTITY
-openLinkCmdInTab
+openFrameCmdInTab
 .
 label
 "
 Open
-Link
+Frame
 in
 New
 Tab
@@ -2860,7 +2862,7 @@ Tab
 <
 !
 ENTITY
-openLinkCmdInTab
+openFrameCmdInTab
 .
 accesskey
 "
@@ -2889,30 +2891,6 @@ openFrameCmd
 accesskey
 "
 W
-"
->
-<
-!
-ENTITY
-openFrameCmdInTab
-.
-label
-"
-Open
-Frame
-in
-New
-Tab
-"
->
-<
-!
-ENTITY
-openFrameCmdInTab
-.
-accesskey
-"
-T
 "
 >
 <
