Bug 583044 - Rename code references of TabCandy to TabView Move files and update references to tabview from tabcandy. Only remaining candy reference is the link to aza's webm video.
UltraBlame original commit: 4285a6de57558b9708ab7c35a5214af4fc9cf188

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -1285,17 +1285,17 @@ Home
 <
 !
 ENTITY
-tabCandyButton
+tabViewButton
 .
 label
 "
-TabCandy
+TabView
 "
 >
 <
 !
 ENTITY
-tabCandyButton
+tabViewButton
 .
 tooltip
 "
@@ -2277,11 +2277,11 @@ V
 <
 !
 ENTITY
-showTabCandy
+showTabView
 .
 label
 "
-TabCandy
+TabView
 "
 >
 <
