Bug 576408 - Implement the downgraded tab triage experience
UltraBlame original commit: 42757fc4edcc27eb8c739b6b8765635e7bd6739a

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -170,6 +170,62 @@ menu
 <
 !
 ENTITY
+moveTabTo
+.
+label
+"
+Move
+This
+Tab
+To
+"
+>
+<
+!
+ENTITY
+moveTabTo
+.
+accesskey
+"
+M
+"
+>
+<
+!
+ENTITY
+createNewGroup
+.
+label
+"
+Create
+New
+Group
+"
+>
+<
+!
+ENTITY
+createNewGroup
+.
+accesskey
+"
+C
+"
+>
+<
+!
+ENTITY
+namedGroup
+.
+label
+"
+Named
+Group
+"
+>
+<
+!
+ENTITY
 reloadTab
 .
 label
