Bug 580679: Build NSS with the TLS zlib compression code. Add the security.ssl.enable_compression preference to enable TLS compression, disabled by default. r=khuey,kaie,sayrer,ted.  approval2.0+ by bsmedberg.
UltraBlame original commit: 1117034e276230c81b711bed86ca587465357f34

--- a/security/patches/README
+++ b/security/patches/README
@@ -49,3 +49,43 @@ ASLR
 on
 Windows
 .
+File
+:
+maemo
+-
+rpath
+-
+link
+.
+patch
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+585247
+Add
+the
+-
+rpath
+-
+link
+linker
+flag
+required
+for
+Maemo
+/
+Scratchbox
+.
