Bug 587102. Expose whether direct2d is enabled to about:support. r=johnath
This adds a graphics section to about:support.

UltraBlame original commit: 032abd339649fb5b5730fab74b1bc2d6dfef31ca

--- a/toolkit/locales/en-US/chrome/global/aboutSupport.dtd
+++ b/toolkit/locales/en-US/chrome/global/aboutSupport.dtd
@@ -317,6 +317,52 @@ Value
 ENTITY
 aboutSupport
 .
+graphicsTitle
+"
+Graphics
+"
+>
+<
+!
+-
+-
+LOCALIZATION
+NOTE
+In
+the
+following
+string
+"
+Direct2D
+"
+is
+a
+proper
+noun
+and
+should
+not
+be
+translated
+-
+-
+>
+<
+!
+ENTITY
+aboutSupport
+.
+graphicsDirect2DEnabled
+"
+Direct2D
+Enabled
+"
+>
+<
+!
+ENTITY
+aboutSupport
+.
 installationHistoryTitle
 "
 Installation
