Bug 587039 - Rename View > TabView And All Instances of Tab Sets to "Group my tabs..." [r=dolske a=dolske]
UltraBlame original commit: 3a7615f9b0d3dee06af6a9afdeed6d61e7caae00

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -1353,26 +1353,24 @@ Home
 <
 !
 ENTITY
-tabViewButton
+tabViewButton2
 .
 label
 "
 Tab
-Sets
+Groups
 "
 >
 <
 !
 ENTITY
-tabViewButton
+tabViewButton2
 .
 tooltip
 "
-Open
-a
-visual
-tab
-interface
+Group
+Your
+Tabs
 "
 >
 <
@@ -2356,21 +2354,23 @@ V
 <
 !
 ENTITY
-showTabView
+showTabView2
 .
 label
 "
-TabView
+Group
+Your
+Tabs
 "
 >
 <
 !
 ENTITY
-showTabView
+showTabView2
 .
 accesskey
 "
-V
+G
 "
 >
 <
