Backout changesets a8b5109c2a6c to 6281bc7f1bbf.
UltraBlame original commit: c14d91f2d939dd44580ac0e79802c9c5b029dd1d

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -1353,24 +1353,26 @@ Home
 <
 !
 ENTITY
-tabViewButton2
+tabViewButton
 .
 label
 "
 Tab
-Groups
+Sets
 "
 >
 <
 !
 ENTITY
-tabViewButton2
+tabViewButton
 .
 tooltip
 "
-Group
-Your
-Tabs
+Open
+a
+visual
+tab
+interface
 "
 >
 <
@@ -2354,23 +2356,21 @@ V
 <
 !
 ENTITY
-showTabView2
+showTabView
 .
 label
 "
-Group
-Your
-Tabs
+TabView
 "
 >
 <
 !
 ENTITY
-showTabView2
+showTabView
 .
 accesskey
 "
-G
+V
 "
 >
 <
