Bug 579707 - Hard-coded strings need to be replaced with entities; r+a=dtownsend
UltraBlame original commit: 1a841e176c6cf50e6d8a1a6ea7ef7bf82eefa46d

--- a/browser/locales/en-US/feedback/main.dtd
+++ b/browser/locales/en-US/feedback/main.dtd
@@ -44,7 +44,36 @@ testpilot
 .
 settings
 .
-notifyMeWhen
+dataSubmission
+.
+label
+"
+Data
+Submission
+"
+>
+<
+!
+ENTITY
+testpilot
+.
+settings
+.
+notifications
+.
+label
+"
+Notifications
+"
+>
+<
+!
+ENTITY
+testpilot
+.
+settings
+.
+notifyWhen
 .
 label
 "
@@ -138,7 +167,7 @@ me
 ENTITY
 testpilot
 .
-allStudies
+allYourStudies
 .
 label
 "
