--- a/browser/locales/en-US/feedback/main.properties
+++ b/browser/locales/en-US/feedback/main.properties
@@ -1,4 +1,31 @@
 #
+description
+for
+add
+-
+on
+manager
+extensions
+.
+testpilot
+labs
+.
+mozilla
+.
+com
+.
+description
+=
+Help
+make
+Firefox
+better
+by
+running
+user
+studies
+.
+#
 common
 testpilot
 .
