Bug 587999 - Knock "Move This Tab To..." context menu item into shape. r=gavin, ui-r=faaborg
UltraBlame original commit: 71030e9b7317189ab33d99ee8b3d8e3bf8c9f659

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -170,62 +170,6 @@ menu
 <
 !
 ENTITY
-moveTabTo
-.
-label
-"
-Move
-This
-Tab
-To
-"
->
-<
-!
-ENTITY
-moveTabTo
-.
-accesskey
-"
-M
-"
->
-<
-!
-ENTITY
-createNewGroup
-.
-label
-"
-Create
-New
-Group
-"
->
-<
-!
-ENTITY
-createNewGroup
-.
-accesskey
-"
-C
-"
->
-<
-!
-ENTITY
-namedGroups
-.
-label
-"
-Named
-Groups
-"
->
-<
-!
-ENTITY
 reloadTab
 .
 label
@@ -356,6 +300,60 @@ unpinTab
 accesskey
 "
 k
+"
+>
+<
+!
+ENTITY
+moveToGroup
+.
+label
+"
+Move
+to
+Group
+"
+>
+<
+!
+ENTITY
+moveToGroup
+.
+accesskey
+"
+M
+"
+>
+<
+!
+ENTITY
+moveToNewGroup
+.
+label
+"
+New
+Group
+"
+>
+<
+!
+ENTITY
+moveToNewGroup
+.
+accesskey
+"
+N
+"
+>
+<
+!
+ENTITY
+namedGroups
+.
+label
+"
+Named
+Groups
 "
 >
 <
