Bug 413363 - Dialog for importing your certificates in Certificate Manager has wrong title. r=kaie
UltraBlame original commit: eb29d2013e863dc168e78d060bf68e804afdba20

--- a/security/manager/locales/en-US/chrome/pippki/pippki.properties
+++ b/security/manager/locales/en-US/chrome/pippki/pippki.properties
@@ -805,12 +805,12 @@ PKCS
 12
 file
 dialogs
-chooseP12RestoreFileDialog
+chooseP12RestoreFileDialog2
 =
+Certificate
 File
-Name
 to
-Restore
+Import
 chooseP12BackupFileDialog
 =
 File
