Bug 561782 -  Create DOM Panel for inspecting DOM nodes and their properties (reticle) Milestone 0.3 r=dietrich a=blocking2.0
UltraBlame original commit: c40c7501190468565b7850aef85258abc207313f

--- a/browser/locales/en-US/chrome/browser/inspector.properties
+++ b/browser/locales/en-US/chrome/browser/inspector.properties
@@ -71,6 +71,7 @@ NOTE
 style
 .
 styleItemLabel
+)
 :
 used
 in
@@ -104,3 +105,59 @@ styleItemLabel
 :
 #
 2
+#
+LOCALIZATION
+NOTE
+(
+dom
+.
+domPanelTitle
+)
+:
+used
+in
+DOM
+Panel
+in
+inspector
+.
+#
+Stands
+for
+"
+Document
+Object
+Model
+"
+.
+Also
+referenced
+in
+in
+browser
+.
+dtd
+#
+and
+used
+as
+a
+button
+title
+.
+#
+Unsure
+if
+this
+localizes
+well
+but
+including
+just
+in
+case
+dom
+.
+domPanelTitle
+=
+DOM
