--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -1899,6 +1899,87 @@ Style
 >
 <
 !
+-
+-
+LOCALIZATION
+NOTE
+(
+inspectDOMButton
+.
+label
+)
+:
+This
+button
+label
+-
+stands
+for
+Document
+Object
+Model
+and
+appears
+on
+the
+inspector
+'
+s
+toolbar
+.
+-
+It
+is
+used
+to
+open
+and
+closed
+the
+DOM
+panel
+.
+There
+is
+also
+a
+DOM
+label
+in
+-
+inspector
+.
+properties
+for
+the
+panel
+titlebar
+.
+-
+-
+>
+<
+!
+ENTITY
+inspectDOMButton
+.
+label
+"
+DOM
+"
+>
+<
+!
+ENTITY
+inspectDOMButton
+.
+accesskey
+"
+D
+"
+>
+<
+!
 ENTITY
 fileMenu
 .
