Bug 345624 - Implement HTML 5's Constraint Validation API. f=ajvincent r=smaug sr=sicking a2.0=blocking
UltraBlame original commit: 8f80a2d92cae87904c325921c1b21c4645a3b804

--- a/dom/locales/en-US/chrome/dom/dom.properties
+++ b/dom/locales/en-US/chrome/dom/dom.properties
@@ -982,3 +982,24 @@ script
 was
 ignored
 .
+ElementSuffersFromBeingTooLong
+=
+The
+text
+is
+too
+long
+.
+It
+is
+%
+S
+characters
+long
+and
+the
+limit
+is
+%
+S
+.
