--- a/dom/locales/en-US/chrome/dom/dom.properties
+++ b/dom/locales/en-US/chrome/dom/dom.properties
@@ -1003,3 +1003,47 @@ is
 %
 S
 .
+TextElementSuffersFromBeingMissing
+=
+This
+field
+is
+mandatory
+you
+have
+to
+fill
+it
+.
+CheckboxElementSuffersFromBeingMissing
+=
+This
+checkbox
+is
+mandatory
+you
+have
+to
+check
+it
+.
+RadioElementSuffersFromBeingMissing
+=
+You
+have
+to
+select
+one
+of
+these
+options
+.
+FileElementSuffersFromBeingMissing
+=
+You
+have
+to
+select
+a
+file
+.
