Bug 345512 - Implement pattern attribute for input elements. f=ajvincent r=sicking,jorendorff sr=smaug a2.0=blocking
UltraBlame original commit: 283ec5de5ee27444e985821e961b763e4def4f65

--- a/dom/locales/en-US/chrome/dom/dom.properties
+++ b/dom/locales/en-US/chrome/dom/dom.properties
@@ -1066,3 +1066,29 @@ is
 not
 valid
 .
+ElementSuffersFromPatternMismatch
+=
+The
+field
+value
+is
+not
+in
+the
+requested
+format
+.
+ElementSuffersFromPatternMismatchWithTitle
+=
+The
+field
+value
+is
+not
+in
+the
+requested
+format
+.
+%
+S
