Bug 546857 Part 3: Make error pages not use xul buttons. r=dao a=blocker
UltraBlame original commit: 61fd19a4587f89ab75f259e0742de56eb94f57f7

--- a/browser/locales/en-US/chrome/overrides/netError.dtd
+++ b/browser/locales/en-US/chrome/overrides/netError.dtd
@@ -1649,98 +1649,38 @@ server
 p
 >
 <
-xul
-:
 button
-xmlns
-:
-xul
-=
-'
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-'
 id
 =
 '
 getMeOutOfHereButton
 '
-label
-=
-'
+>
 &
 securityOverride
 .
 getMeOutOfHereButton
 ;
-'
+<
 /
+button
 >
 <
-xul
-:
 button
-xmlns
-:
-xul
-=
-'
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-'
 id
 =
 '
 exceptionDialogButton
 '
-label
-=
-'
+>
 &
 securityOverride
 .
 exceptionButtonLabel
 ;
-'
+<
 /
+button
 >
 "
 >
