Bug 582400 - Move the Clear button in the Web Console to a context menu. r+a=dietrich ui-r=limi
UltraBlame original commit: d35447bc512e53191aec6dfcd13fe81458634785

--- a/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
+++ b/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
@@ -176,16 +176,10 @@ localConsole
 =
 Local
 Console
-btnClear
+itemClear
 =
 Clear
 Console
-tipClear
-=
-Clear
-the
-console
-output
 stringFilter
 =
 Filter
