Bug 567127 - Add install button to the add-ons manager. r=dtownsend, ui-r=Boriss, a=blocking-beta5
UltraBlame original commit: faea7e06f76280fdc243247f19c08fb73ceda1fa

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -146,6 +146,28 @@ ons
 >
 <
 !
+ENTITY
+installFromFile
+.
+label
+"
+Install
+from
+file
+"
+>
+<
+!
+ENTITY
+installFromFile
+.
+accesskey
+"
+I
+"
+>
+<
+!
 -
 -
 categories
