--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
@@ -359,6 +359,23 @@ restart
 %
 2
 S
+installFromFile
+.
+dialogTitle
+=
+Select
+add
+-
+on
+to
+install
+installFromFile
+.
+filterName
+=
+Add
+-
+ons
 uninstallAddonTooltip
 =
 Uninstall
