Backed out changeset 1504917ed42e due to 4% twinopen regression. a=backout.
UltraBlame original commit: adbc1d5888f4c9eabd1b656f5e64693ae00f4603

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2608,6 +2608,16 @@ H
 <
 !
 ENTITY
+appMenuPrintCmd
+.
+label
+"
+Print
+"
+>
+<
+!
+ENTITY
 appMenuCustomize
 .
 label
@@ -2639,33 +2649,11 @@ Sidebars
 <
 !
 ENTITY
-appMenuFind
+appMenuHelp
 .
 label
 "
-Find
-"
->
-<
-!
-ENTITY
-appMenuUnsorted
-.
-label
-"
-Unsorted
-Bookmarks
-"
->
-<
-!
-ENTITY
-appMenuGettingStarted
-.
-label
-"
-Getting
-Started
+Help
 "
 >
 <
