Bug 583386 - Implement latest Firefox Menu design. r=dolske, ui-r=faaborg, a=blocking2.0
UltraBlame original commit: 1504917ed42e2e917d587a740b7af406f44ab6da

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2608,16 +2608,6 @@ H
 <
 !
 ENTITY
-appMenuPrintCmd
-.
-label
-"
-Print
-"
->
-<
-!
-ENTITY
 appMenuCustomize
 .
 label
@@ -2649,11 +2639,33 @@ Sidebars
 <
 !
 ENTITY
-appMenuHelp
+appMenuFind
 .
 label
 "
-Help
+Find
+"
+>
+<
+!
+ENTITY
+appMenuUnsorted
+.
+label
+"
+Unsorted
+Bookmarks
+"
+>
+<
+!
+ENTITY
+appMenuGettingStarted
+.
+label
+"
+Getting
+Started
 "
 >
 <
