Bug 546857 Part 4b: Fix some errors in previous patch to not use XUL on error pages. r=dao a=blocker
UltraBlame original commit: baff7b7b32bc3dd7132cddd3957f6898b5bebfaf

--- a/browser/locales/en-US/chrome/overrides/netError.dtd
+++ b/browser/locales/en-US/chrome/overrides/netError.dtd
@@ -1545,7 +1545,7 @@ NOTE
 (
 securityOverride
 .
-warningText
+warningContent
 )
 -
 Do
@@ -1556,22 +1556,11 @@ contents
 of
 the
 <
-xul
-:
 button
 >
 tags
 .
-The
-only
-language
-content
-is
-the
-label
-=
-field
-which
+It
 uses
 strings
 already
@@ -1606,7 +1595,7 @@ firefox
 ENTITY
 securityOverride
 .
-warningText
+warningContent
 "
 <
 p
