Backout of changesets c866e73f3209 and baff7b7b32bc because of sicking's push-and-run bustage. a=backout
UltraBlame original commit: ee6fb954cbc3de0f76e84cad6bdff452116e1b03

--- a/browser/locales/en-US/chrome/overrides/netError.dtd
+++ b/browser/locales/en-US/chrome/overrides/netError.dtd
@@ -1545,7 +1545,7 @@ NOTE
 (
 securityOverride
 .
-warningContent
+warningText
 )
 -
 Do
@@ -1556,11 +1556,22 @@ contents
 of
 the
 <
+xul
+:
 button
 >
 tags
 .
-It
+The
+only
+language
+content
+is
+the
+label
+=
+field
+which
 uses
 strings
 already
@@ -1595,7 +1606,7 @@ firefox
 ENTITY
 securityOverride
 .
-warningContent
+warningText
 "
 <
 p
