Bug 585950: Implement the new list view mockups. r=Unfocused, a=blocking-beta5
UltraBlame original commit: 76559e9039e2fd6f1f432b7de9810b9ba0bd82e6

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -1118,32 +1118,6 @@ name
 ENTITY
 sort
 .
-size
-.
-label
-"
-Size
-"
->
-<
-!
-ENTITY
-sort
-.
-size
-.
-tooltip
-"
-Sort
-by
-size
-"
->
-<
-!
-ENTITY
-sort
-.
 dateUpdated
 .
 label
@@ -1192,52 +1166,6 @@ Sort
 by
 average
 rating
-"
->
-<
-!
-ENTITY
-showMore
-.
-label
-"
-Show
-more
-"
->
-<
-!
-ENTITY
-showMore
-.
-tooltip
-"
-Show
-more
-details
-"
->
-<
-!
-ENTITY
-showLess
-.
-label
-"
-Show
-less
-"
->
-<
-!
-ENTITY
-showLess
-.
-tooltip
-"
-Show
-fewer
-details
 "
 >
 <
@@ -1296,6 +1224,37 @@ addon
 homepage
 "
 Homepage
+"
+>
+<
+!
+ENTITY
+addon
+.
+details
+.
+label
+"
+More
+"
+>
+<
+!
+ENTITY
+addon
+.
+details
+.
+tooltip
+"
+Show
+more
+details
+about
+this
+add
+-
+on
 "
 >
 <
@@ -1440,22 +1399,6 @@ label
 "
 Restart
 now
-"
->
-<
-!
-ENTITY
-addon
-.
-restartNow
-.
-tooltip
-"
-Restart
-now
-to
-complete
-installation
 "
 >
 <
