--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
@@ -218,30 +218,331 @@ S
 LOCALIZATION
 NOTE
 (
-incompatibleWith
+notification
+.
+incompatible
 )
 %
 1
 S
 is
-brand
+the
+add
+-
+on
 name
 %
 2
 S
 is
+brand
+name
+%
+3
+S
+is
 application
 version
-incompatibleWith
+notification
+.
+incompatible
 =
-Incompatible
-with
 %
 1
 S
+is
+incompatible
+with
 %
 2
 S
+%
+3
+S
+.
+#
+LOCALIZATION
+NOTE
+(
+notification
+.
+blocked
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+notification
+.
+blocked
+=
+%
+1
+S
+has
+been
+disabled
+due
+to
+security
+or
+stability
+issues
+.
+notification
+.
+blocked
+.
+link
+=
+More
+Information
+#
+LOCALIZATION
+NOTE
+(
+notification
+.
+softblocked
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+notification
+.
+softblocked
+=
+%
+1
+S
+is
+known
+to
+cause
+security
+or
+stability
+issues
+.
+notification
+.
+softblocked
+.
+link
+=
+More
+Information
+#
+LOCALIZATION
+NOTE
+(
+notification
+.
+enable
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+%
+2
+S
+is
+brand
+name
+notification
+.
+enable
+=
+%
+1
+S
+will
+be
+enabled
+after
+you
+restart
+%
+2
+S
+.
+#
+LOCALIZATION
+NOTE
+(
+notification
+.
+disable
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+%
+2
+S
+is
+brand
+name
+notification
+.
+disable
+=
+%
+1
+S
+will
+be
+disabled
+after
+you
+restart
+%
+2
+S
+.
+#
+LOCALIZATION
+NOTE
+(
+notification
+.
+install
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+%
+2
+S
+is
+brand
+name
+notification
+.
+install
+=
+%
+1
+S
+will
+be
+installed
+after
+you
+restart
+%
+2
+S
+.
+#
+LOCALIZATION
+NOTE
+(
+notification
+.
+uninstall
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+%
+2
+S
+is
+brand
+name
+notification
+.
+uninstall
+=
+%
+1
+S
+will
+be
+uninstalled
+after
+you
+restart
+%
+2
+S
+.
+#
+LOCALIZATION
+NOTE
+(
+notification
+.
+upgrade
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+%
+2
+S
+is
+brand
+name
+notification
+.
+upgrade
+=
+%
+1
+S
+will
+be
+updated
+after
+you
+restart
+%
+2
+S
+.
 installDownloading
 =
 Downloading
@@ -258,16 +559,6 @@ Verifying
 installInstalling
 =
 Installing
-installInstallPending
-=
-Ready
-to
-install
-installUpdatePending
-=
-Ready
-to
-update
 installEnablePending
 =
 Restart
