Bug 572695: Remove "Report a Broken Website" from Firefox. r=dolske, a=blocking-betaN
UltraBlame original commit: cbf5a39412728d873d9c6b5ec3f41b7969250e2c

--- a/browser/locales/en-US/chrome/browser/baseMenuOverlay.dtd
+++ b/browser/locales/en-US/chrome/browser/baseMenuOverlay.dtd
@@ -250,6 +250,27 @@ T
 <
 !
 ENTITY
+helpFeedbackPage
+.
+label
+"
+Submit
+Feedback
+"
+>
+<
+!
+ENTITY
+helpFeedbackPage
+.
+accesskey
+"
+S
+"
+>
+<
+!
+ENTITY
 updateCmd
 .
 label
