Backed out changeset 860c490eb849
UltraBlame original commit: 0868c30effb1a5fb0efd47d8a16cded4599f5cd9

--- a/browser/locales/en-US/chrome/browser/aboutSessionRestore.dtd
+++ b/browser/locales/en-US/chrome/browser/aboutSessionRestore.dtd
@@ -166,6 +166,30 @@ R
 ENTITY
 restorepage
 .
+cancelButton
+"
+Start
+New
+Session
+"
+>
+<
+!
+ENTITY
+restorepage
+.
+cancel
+.
+access
+"
+S
+"
+>
+<
+!
+ENTITY
+restorepage
+.
 restoreHeader
 "
 Restore
