Bug 581084: List of search results doesn't visually differentiate between installed add-ons and available add-ons. r=Unfocused, a=blocking-beta5
UltraBlame original commit: 00186bbb7459ce04c76fc2c5e138c10b435a2c78

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -1173,11 +1173,11 @@ rating
 ENTITY
 search
 .
-filter
+filter2
 .
 label
 "
-Show
+Search
 :
 "
 >
@@ -1186,13 +1186,30 @@ Show
 ENTITY
 search
 .
-filter
+filter2
 .
 installed
 .
 label
 "
-Your
+My
+Add
+-
+ons
+"
+>
+<
+!
+ENTITY
+search
+.
+filter2
+.
+installed
+.
+tooltip
+"
+Show
 installed
 add
 -
@@ -1204,16 +1221,36 @@ ons
 ENTITY
 search
 .
-filter
+filter2
 .
 available
 .
 label
 "
 Available
+Add
+-
+ons
+"
+>
+<
+!
+ENTITY
+search
+.
+filter2
+.
+available
+.
+tooltip
+"
+Show
 add
 -
 ons
+available
+to
+install
 "
 >
 <
