Bug 589209 - change name of DOM panel to Object r=gavin.sharp a=gavin.sharp
UltraBlame original commit: d207cb43a7bfacf6501d8d0221f18fb0c39f07d0

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -1883,7 +1883,7 @@ Style
 LOCALIZATION
 NOTE
 (
-inspectDOMButton
+inspectObjectButton
 .
 label
 )
@@ -1892,47 +1892,44 @@ This
 button
 label
 -
-stands
-for
-Document
-Object
-Model
-and
 appears
 on
 the
-inspector
+Inspector
 '
 s
 toolbar
 .
--
 It
 is
 used
 to
 open
 and
-closed
+close
 the
-DOM
+Object
+-
 panel
 .
 There
 is
 also
 a
-DOM
 label
 in
--
 inspector
 .
 properties
 for
 the
 panel
+-
 titlebar
+:
+object
+.
+objectPanelTitle
 .
 -
 -
@@ -1940,21 +1937,21 @@ titlebar
 <
 !
 ENTITY
-inspectDOMButton
+inspectObjectButton
 .
 label
 "
-DOM
+Object
 "
 >
 <
 !
 ENTITY
-inspectDOMButton
+inspectObjectButton
 .
 accesskey
 "
-D
+O
 "
 >
 <
