--- a/browser/locales/en-US/chrome/browser/inspector.properties
+++ b/browser/locales/en-US/chrome/browser/inspector.properties
@@ -109,55 +109,49 @@ styleItemLabel
 LOCALIZATION
 NOTE
 (
-dom
+object
 .
-domPanelTitle
+objectPanelTitle
 )
 :
 used
 in
-DOM
+the
+Object
 Panel
 in
-inspector
-.
+the
 #
-Stands
-for
-"
-Document
-Object
-Model
-"
+Inspector
+tool
 .
-Also
-referenced
-in
+There
+'
+s
+also
+inspectObjectButton
 in
 browser
 .
 dtd
+for
+the
 #
-and
-used
-as
-a
+toolbar
 button
-title
+which
+allows
+users
+to
+open
+/
+close
+the
+Object
+panel
 .
-#
-Unsure
-if
-this
-localizes
-well
-but
-including
-just
-in
-case
-dom
+object
 .
-domPanelTitle
+objectPanelTitle
 =
-DOM
+Object
