Bug 585877 - Add a warning for document.width and document.height; r=sicking a=jst
UltraBlame original commit: dc76a10a7bdf5b34a1456e3e66fdc647d2c8e43b

--- a/dom/locales/en-US/chrome/dom/dom.properties
+++ b/dom/locales/en-US/chrome/dom/dom.properties
@@ -1092,3 +1092,43 @@ format
 .
 %
 S
+UseOfDocumentWidthWarning
+=
+Non
+-
+standard
+document
+.
+width
+was
+used
+.
+Use
+standard
+document
+.
+body
+.
+clientWidth
+instead
+.
+UseOfDocumentHeightWarning
+=
+Non
+-
+standard
+document
+.
+height
+was
+used
+.
+Use
+standard
+document
+.
+body
+.
+clientHeight
+instead
+.
