--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -152,8 +152,8 @@ installFromFile
 label
 "
 Install
-from
-file
+From
+File
 "
 >
 <
@@ -519,8 +519,8 @@ showDetails
 label
 "
 Show
-more
-information
+More
+Information
 "
 >
 <
@@ -545,7 +545,7 @@ findUpdates
 label
 "
 Find
-updates
+Updates
 "
 >
 <
