Bug 581073 - Search pane needs to expose the relevancy sort order. r=dtownsend, a=blocking-beta5
UltraBlame original commit: 83ac11749dd7ba41abdb40d42ac55a6762dd0bdd

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -1146,11 +1146,12 @@ updated
 ENTITY
 sort
 .
-rating
+relevance
 .
 label
 "
-Rating
+Best
+match
 "
 >
 <
@@ -1158,14 +1159,13 @@ Rating
 ENTITY
 sort
 .
-rating
+relevance
 .
 tooltip
 "
 Sort
 by
-average
-rating
+relevance
 "
 >
 <
