--- a/toolkit/locales/en-US/chrome/mozapps/update/updates.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/update/updates.dtd
@@ -574,6 +574,17 @@ Details
 ENTITY
 error
 .
+title
+"
+Update
+Failed
+"
+>
+<
+!
+ENTITY
+error
+.
 label
 "
 There
@@ -629,17 +640,6 @@ version
 ENTITY
 errorpatching
 .
-title
-"
-Update
-Failed
-"
->
-<
-!
-ENTITY
-errorpatching
-.
 intro
 "
 The
@@ -661,6 +661,70 @@ downloading
 a
 complete
 Update
+.
+"
+>
+<
+!
+ENTITY
+errorCertAttrNoUpdate
+.
+label
+"
+Something
+is
+preventing
+&
+brandShortName
+;
+from
+updating
+securely
+.
+Please
+check
+you
+have
+the
+latest
+version
+of
+&
+brandShortName
+;
+at
+:
+"
+>
+<
+!
+ENTITY
+errorCertAttrHasUpdate
+.
+label
+"
+Something
+is
+trying
+to
+trick
+&
+brandShortName
+;
+into
+accepting
+an
+insecure
+update
+.
+Please
+contact
+your
+network
+provider
+and
+seek
+help
 .
 "
 >
