Bug 562797: Add-ons Manager needs to integrate with browser session history. r=Unfocused, r=sdwilsh, a=blocking-beta5
UltraBlame original commit: 68fa23925a1f35d550eb43d03c6aae71644b11f9

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -168,33 +168,41 @@ I
 >
 <
 !
--
--
-categories
-/
-views
--
--
+ENTITY
+cmd
+.
+back
+.
+tooltip
+"
+Go
+back
+one
+page
+"
+>
+<
+!
+ENTITY
+cmd
+.
+forward
+.
+tooltip
+"
+Go
+forward
+one
+page
+"
 >
 <
 !
 -
 -
-LOCALIZATION
-NOTE
-:
-These
-should
-match
-the
-header
--
-*
-entries
-in
-extensions
-.
-properties
+categories
+/
+views
 -
 -
 >
