Bug 587857 - Add a pref on Windows to easily disable Direct2D. r=gavin ui-r=beltzner a=blocking2.0:beta5+
UltraBlame original commit: 28408b39ee0c3d28c3f6bd42e0e8e242fedfa11c

--- a/browser/locales/en-US/chrome/browser/preferences/advanced.dtd
+++ b/browser/locales/en-US/chrome/browser/preferences/advanced.dtd
@@ -175,6 +175,30 @@ m
 <
 !
 ENTITY
+allowHWAccel
+.
+label
+"
+Use
+hardware
+acceleration
+when
+available
+"
+>
+<
+!
+ENTITY
+allowHWAccel
+.
+accesskey
+"
+h
+"
+>
+<
+!
+ENTITY
 checkSpelling
 .
 label
