Bug 589344 - Add tooltip to utilities button r=bmcbride a=beta5+
UltraBlame original commit: f8d5ca6e16d9ff7a24638485a90a9d1933bf4db1

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -322,6 +322,44 @@ Updates
 >
 <
 !
+ENTITY
+view
+.
+utilites
+.
+preferences
+.
+tooltip
+"
+Options
+for
+all
+add
+-
+ons
+"
+>
+<
+!
+ENTITY
+view
+.
+utilites
+.
+preferencesUnix
+.
+tooltip
+"
+Preferences
+for
+all
+add
+-
+ons
+"
+>
+<
+!
 -
 -
 addon
