Bug 589343 - Preferences button should be called Options on Windows r=bmcbride a=beta5+
UltraBlame original commit: a5632d67fe28a53f3a51b68c5093b405b07fb32b

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -577,7 +577,7 @@ preferences
 .
 label
 "
-Preferences
+Options
 "
 >
 <
@@ -586,6 +586,30 @@ ENTITY
 cmd
 .
 preferences
+.
+accesskey
+"
+O
+"
+>
+<
+!
+ENTITY
+cmd
+.
+preferencesUnix
+.
+label
+"
+Preferences
+"
+>
+<
+!
+ENTITY
+cmd
+.
+preferencesUnix
 .
 accesskey
 "
@@ -697,7 +721,19 @@ showPreferences
 .
 label
 "
-Preferences
+Options
+"
+>
+<
+!
+ENTITY
+cmd
+.
+showPreferences
+.
+accesskey
+"
+O
 "
 >
 <
@@ -716,7 +752,50 @@ add
 on
 '
 s
+options
+"
+>
+<
+!
+ENTITY
+cmd
+.
+showPreferencesUnix
+.
+label
+"
+Preferences
+"
+>
+<
+!
+ENTITY
+cmd
+.
+showPreferencesUnix
+.
+tooltip
+"
+Change
+this
+add
+-
+on
+'
+s
 preferences
+"
+>
+<
+!
+ENTITY
+cmd
+.
+showPreferencesUnix
+.
+accesskey
+"
+P
 "
 >
 <
@@ -998,7 +1077,7 @@ showPreferences
 .
 label
 "
-Preferences
+Options
 "
 >
 <
@@ -1010,7 +1089,7 @@ showPreferences
 .
 accesskey
 "
-P
+O
 "
 >
 <
@@ -1019,6 +1098,49 @@ ENTITY
 detail
 .
 showPreferences
+.
+tooltip
+"
+Change
+this
+add
+-
+on
+'
+s
+Options
+"
+>
+<
+!
+ENTITY
+detail
+.
+showPreferencesUnix
+.
+label
+"
+Preferences
+"
+>
+<
+!
+ENTITY
+detail
+.
+showPreferencesUnix
+.
+accesskey
+"
+P
+"
+>
+<
+!
+ENTITY
+detail
+.
+showPreferencesUnix
 .
 tooltip
 "
