Bug 589343 followup: change entity names to indicate semantic change to the string, a=l10nfix
UltraBlame original commit: a237bc7080ab96b5d8ec00a30e3c1ad576ea1610

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -611,7 +611,7 @@ F
 ENTITY
 cmd
 .
-preferences
+preferencesWin
 .
 label
 "
@@ -623,7 +623,7 @@ Options
 ENTITY
 cmd
 .
-preferences
+preferencesWin
 .
 accesskey
 "
@@ -755,7 +755,7 @@ R
 ENTITY
 cmd
 .
-showPreferences
+showPreferencesWin
 .
 label
 "
@@ -767,19 +767,7 @@ Options
 ENTITY
 cmd
 .
-showPreferences
-.
-accesskey
-"
-O
-"
->
-<
-!
-ENTITY
-cmd
-.
-showPreferences
+showPreferencesWin
 .
 tooltip
 "
@@ -822,18 +810,6 @@ on
 '
 s
 preferences
-"
->
-<
-!
-ENTITY
-cmd
-.
-showPreferencesUnix
-.
-accesskey
-"
-P
 "
 >
 <
@@ -1111,7 +1087,7 @@ on
 ENTITY
 detail
 .
-showPreferences
+showPreferencesWin
 .
 label
 "
@@ -1123,7 +1099,7 @@ Options
 ENTITY
 detail
 .
-showPreferences
+showPreferencesWin
 .
 accesskey
 "
@@ -1135,7 +1111,7 @@ O
 ENTITY
 detail
 .
-showPreferences
+showPreferencesWin
 .
 tooltip
 "
