--- a/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
+++ b/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
@@ -698,3 +698,159 @@ S
 3
 Sms
 ]
+NetworkPanel
+.
+label
+=
+Inspect
+Network
+Request
+#
+LOCALIZATION
+NOTE
+(
+NetworkPanel
+.
+deltaDurationMS
+)
+:
+#
+#
+This
+string
+is
+used
+to
+show
+the
+duration
+between
+two
+network
+events
+(
+e
+.
+g
+#
+request
+and
+respones
+header
+or
+response
+header
+and
+response
+body
+)
+.
+NetworkPanel
+.
+durationMS
+=
+%
+Sms
+#
+LOCALIZATION
+NOTE
+(
+NetworkPanel
+.
+imageSizeDeltaDurationMS
+)
+:
+#
+This
+string
+is
+used
+to
+show
+the
+duration
+between
+the
+response
+header
+and
+the
+#
+response
+body
+event
+.
+It
+also
+shows
+the
+size
+of
+the
+received
+or
+cached
+image
+.
+#
+#
+The
+first
+%
+S
+is
+replace
+by
+the
+width
+of
+the
+inspected
+image
+.
+#
+The
+second
+%
+S
+is
+replaced
+by
+the
+height
+of
+the
+inspected
+image
+.
+#
+The
+third
+%
+S
+is
+replaced
+by
+the
+duration
+between
+the
+response
+header
+and
+the
+#
+response
+body
+event
+.
+NetworkPanel
+.
+imageSizeDeltaDurationMS
+=
+%
+Sx
+%
+Spx
+%
+Sms
