Bug 588540 - NetworkPanel: Display submitted form data formated, r=sdwilsh, a=sdwilsh
UltraBlame original commit: 95ed0bd8f88bf74c5a30e17704d49bcb7b6c58e1

--- a/toolkit/locales/en-US/chrome/global/webConsole.dtd
+++ b/toolkit/locales/en-US/chrome/global/webConsole.dtd
@@ -69,6 +69,18 @@ Body
 ENTITY
 networkPanel
 .
+requestFormData
+"
+Sent
+Form
+Data
+"
+>
+<
+!
+ENTITY
+networkPanel
+.
 responseHeaders
 "
 Response
