Bug 581076 - No "See all results" link present when searching for add-ons and not all are displayed (extensions.getAddons.maxResults). r=dtownsend, a=blocking-beta5
UltraBlame original commit: 6fe388a0fb5eb94bc4b9969d60111b8ce5141378

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
@@ -624,3 +624,31 @@ on
 restart
 required
 )
+#
+LOCALIZATION
+NOTE
+(
+showAllSearchResults
+)
+#
+1
+is
+the
+total
+number
+of
+search
+results
+showAllSearchResults
+=
+See
+all
+#
+1
+result
+;
+See
+all
+#
+1
+results
