Bug 575789 - JSTerm: helper functions, r=sdwilsh, a=blocking2.0
UltraBlame original commit: b80f3d724eb3f4a36c1e0b269c54ede25f110e60

--- a/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
+++ b/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
@@ -455,6 +455,19 @@ copyCmd
 accesskey
 =
 C
+helperFuncUnsupportedTypeError
+=
+Can
+'
+t
+call
+pprint
+on
+this
+type
+of
+object
+.
 #
 LOCALIZATION
 NOTE
