Bug 562902: Implement the final detail view mockups. r=Unfocused, a=blocking-b6
UltraBlame original commit: ea01bf6029f18d47a0882189ef8aed6b806daf08

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -731,6 +731,30 @@ D
 ENTITY
 cmd
 .
+installAddon
+.
+label
+"
+Install
+"
+>
+<
+!
+ENTITY
+cmd
+.
+installAddon
+.
+accesskey
+"
+I
+"
+>
+<
+!
+ENTITY
+cmd
+.
 uninstallAddon
 .
 label
@@ -946,10 +970,11 @@ Version
 ENTITY
 detail
 .
-updated
+lastupdated
 .
 label
 "
+Last
 Updated
 "
 >
@@ -994,47 +1019,130 @@ Downloads
 ENTITY
 detail
 .
-updateAutomatically
+contributions
 .
-label
+description
 "
-Update
-automatically
-"
->
-<
-!
-ENTITY
-detail
-.
-updateAutomatically
-.
-accesskey
-"
-U
-"
->
-<
-!
-ENTITY
-detail
-.
-updateAutomatically
-.
-tooltip
-"
-Update
+The
+developer
+of
 this
 add
 -
 on
-automatically
-whenever
-there
-is
-an
-update
-available
+asks
+that
+you
+help
+support
+its
+continued
+development
+by
+making
+a
+small
+contribution
+.
+"
+>
+<
+!
+ENTITY
+detail
+.
+updateType
+"
+Automatic
+Updates
+"
+>
+<
+!
+ENTITY
+detail
+.
+updateAutomatic
+.
+label
+"
+On
+"
+>
+<
+!
+ENTITY
+detail
+.
+updateAutomatic
+.
+tooltip
+"
+Automatically
+install
+updates
+"
+>
+<
+!
+ENTITY
+detail
+.
+updateManual
+.
+label
+"
+Off
+"
+>
+<
+!
+ENTITY
+detail
+.
+updateManual
+.
+tooltip
+"
+Don
+'
+t
+automaticall
+install
+updates
+"
+>
+<
+!
+ENTITY
+detail
+.
+home
+"
+Homepage
+"
+>
+<
+!
+ENTITY
+detail
+.
+repository
+"
+Add
+-
+on
+Profile
+"
+>
+<
+!
+ENTITY
+detail
+.
+size
+"
+Size
 "
 >
 <
