--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
@@ -446,6 +446,28 @@ restart
 2
 S
 .
+#
+LOCALIZATION
+NOTE
+(
+contributionAmount
+)
+%
+S
+is
+the
+currency
+amount
+recommended
+for
+contributions
+contributionAmount
+=
+Suggested
+Donation
+:
+%
+S
 installDownloading
 =
 Downloading
@@ -483,13 +505,21 @@ cancelled
 #
 LOCALIZATION
 NOTE
-:
+(
+details
+.
+notification
+.
+incompatible
+)
 %
 1
 S
 is
 the
-addon
+add
+-
+on
 name
 %
 2
@@ -497,7 +527,156 @@ S
 is
 brand
 name
-restartToEnable2
+%
+3
+S
+is
+application
+version
+details
+.
+notification
+.
+incompatible
+=
+%
+1
+S
+is
+incompatible
+with
+%
+2
+S
+%
+3
+S
+.
+#
+LOCALIZATION
+NOTE
+(
+details
+.
+notification
+.
+blocked
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+details
+.
+notification
+.
+blocked
+=
+%
+1
+S
+has
+been
+disabled
+due
+to
+security
+or
+stability
+issues
+.
+details
+.
+notification
+.
+blocked
+.
+link
+=
+More
+Information
+#
+LOCALIZATION
+NOTE
+(
+details
+.
+notification
+.
+softblocked
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+details
+.
+notification
+.
+softblocked
+=
+%
+1
+S
+is
+known
+to
+cause
+security
+or
+stability
+issues
+.
+details
+.
+notification
+.
+softblocked
+.
+link
+=
+More
+Information
+#
+LOCALIZATION
+NOTE
+(
+details
+.
+notification
+.
+enable
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+%
+2
+S
+is
+brand
+name
+details
+.
+notification
+.
+enable
 =
 %
 1
@@ -511,7 +690,37 @@ restart
 %
 2
 S
-restartToDisable
+.
+#
+LOCALIZATION
+NOTE
+(
+details
+.
+notification
+.
+disable
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+%
+2
+S
+is
+brand
+name
+details
+.
+notification
+.
+disable
 =
 %
 1
@@ -525,21 +734,125 @@ restart
 %
 2
 S
-restartToUninstall
+.
+#
+LOCALIZATION
+NOTE
+(
+details
+.
+notification
+.
+install
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+%
+2
+S
+is
+brand
+name
+details
+.
+notification
+.
+install
 =
 %
 1
 S
 will
 be
-removed
+installed
 after
 you
 restart
 %
 2
 S
-restartToUpgrade
+.
+#
+LOCALIZATION
+NOTE
+(
+details
+.
+notification
+.
+uninstall
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+%
+2
+S
+is
+brand
+name
+details
+.
+notification
+.
+uninstall
+=
+%
+1
+S
+will
+be
+uninstalled
+after
+you
+restart
+%
+2
+S
+.
+#
+LOCALIZATION
+NOTE
+(
+details
+.
+notification
+.
+upgrade
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+%
+2
+S
+is
+brand
+name
+details
+.
+notification
+.
+upgrade
 =
 %
 1
@@ -553,6 +866,7 @@ restart
 %
 2
 S
+.
 installFromFile
 .
 dialogTitle
