Bug 563135: Add-ons manager should expose outdated plugins. r=Unfocused, a=blocking-b6
UltraBlame original commit: 7739cff04a0be9af3e16fdc499b1b2679fb89d4b

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
@@ -252,6 +252,45 @@ NOTE
 (
 notification
 .
+outdated
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+notification
+.
+outdated
+=
+An
+important
+update
+is
+available
+for
+%
+1
+S
+.
+notification
+.
+outdated
+.
+link
+=
+Update
+Now
+#
+LOCALIZATION
+NOTE
+(
+notification
+.
 enable
 )
 %
@@ -647,6 +686,51 @@ link
 =
 More
 Information
+#
+LOCALIZATION
+NOTE
+(
+details
+.
+notification
+.
+outdated
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+details
+.
+notification
+.
+outdated
+=
+An
+important
+update
+is
+available
+for
+%
+1
+S
+.
+details
+.
+notification
+.
+outdated
+.
+link
+=
+Update
+Now
 #
 LOCALIZATION
 NOTE
