Bug 592295: Remove question mark from Undo?. r=dtownsend, a=blocking-b6
UltraBlame original commit: b0334ccc6ee177b1b6d2d0c8663ffb7ed10141c9

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -1625,12 +1625,11 @@ Update
 ENTITY
 addon
 .
-undo
+undoAction
 .
 label
 "
 Undo
-?
 "
 >
 <
@@ -1638,7 +1637,7 @@ Undo
 ENTITY
 addon
 .
-undo
+undoAction
 .
 tooltip
 "
@@ -1652,12 +1651,11 @@ action
 ENTITY
 addon
 .
-undoUninstall
+undoRemove
 .
 label
 "
 Undo
-?
 "
 >
 <
@@ -1665,7 +1663,7 @@ Undo
 ENTITY
 addon
 .
-undoUninstall
+undoRemove
 .
 tooltip
 "
