Bug 590841 - Add the ability for a DOM window to let us know when it's accelerated, and use that value in about:support. r=gavin sr=roc a=blocking2.0:beta6+
UltraBlame original commit: c741254fe595235b8d79c4ae4e8e8b935f915bfd

--- a/toolkit/locales/en-US/chrome/global/aboutSupport.properties
+++ b/toolkit/locales/en-US/chrome/global/aboutSupport.properties
@@ -39,6 +39,32 @@ in
 about
 :
 support
+#
+LOCALIZATION
+NOTE
+:
+This
+can
+be
+localized
+with
+a
+more
+generic
+term
+like
+#
+"
+graphics
+acceleration
+.
+"
+acceleratedLayersEnabled
+=
+GPU
+Accelerated
+Layers
+Enabled
 direct2DEnabled
 =
 Direct2D
