Bug 581076 - No "See all results" link present when searching for add-ons and not all are displayed (extensions.getAddons.maxResults). r=dtownsend, a=blocking-beta6
UltraBlame original commit: 164c156307c7aee314df17be3d0e253a56aed02d

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
@@ -1022,3 +1022,29 @@ on
 restart
 required
 )
+#
+LOCALIZATION
+NOTE
+(
+showAllSearchResults
+)
+#
+1
+is
+the
+total
+number
+of
+search
+results
+showAllSearchResults
+=
+See
+one
+result
+;
+See
+all
+#
+1
+results
