--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -200,6 +200,158 @@ page
 !
 -
 -
+global
+warnings
+-
+-
+>
+<
+!
+ENTITY
+warning
+.
+safemode
+.
+label
+"
+All
+add
+-
+ons
+have
+been
+disabled
+by
+safe
+mode
+.
+"
+>
+<
+!
+ENTITY
+warning
+.
+checkcompatibility
+.
+label
+"
+Add
+-
+on
+compatibility
+checking
+is
+disabled
+.
+You
+may
+have
+incompatible
+add
+-
+ons
+.
+"
+>
+<
+!
+ENTITY
+warning
+.
+checkcompatibility
+.
+enable
+.
+label
+"
+Enable
+"
+>
+<
+!
+ENTITY
+warning
+.
+checkcompatibility
+.
+enable
+.
+tooltip
+"
+Enable
+add
+-
+on
+compatibility
+checking
+"
+>
+<
+!
+ENTITY
+warning
+.
+updatesecurity
+.
+label
+"
+Add
+-
+on
+update
+security
+checking
+is
+disabled
+.
+You
+may
+be
+compromised
+by
+updates
+.
+"
+>
+<
+!
+ENTITY
+warning
+.
+updatesecurity
+.
+enable
+.
+label
+"
+Enable
+"
+>
+<
+!
+ENTITY
+warning
+.
+updatesecurity
+.
+enable
+.
+tooltip
+"
+Enable
+add
+-
+on
+update
+security
+checking
+"
+>
+<
+!
+-
+-
 categories
 /
 views
