--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -883,6 +883,57 @@ D
 ENTITY
 cmd
 .
+enableTheme
+.
+label
+"
+Wear
+Theme
+"
+>
+<
+!
+ENTITY
+cmd
+.
+enableTheme
+.
+accesskey
+"
+W
+"
+>
+<
+!
+ENTITY
+cmd
+.
+disableTheme
+.
+label
+"
+Stop
+Wearing
+Theme
+"
+>
+<
+!
+ENTITY
+cmd
+.
+disableTheme
+.
+accesskey
+"
+W
+"
+>
+<
+!
+ENTITY
+cmd
+.
 installAddon
 .
 label
