--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -773,6 +773,51 @@ manageButton
 accesskey
 =
 M
+#
+LOCALIZATION
+NOTE
+(
+lwthemeNeedsRestart
+.
+message
+)
+:
+#
+%
+S
+will
+be
+replaced
+with
+the
+new
+theme
+name
+.
+lwthemeNeedsRestart
+.
+message
+=
+%
+S
+will
+be
+installed
+after
+you
+restart
+.
+lwthemeNeedsRestart
+.
+button
+=
+Restart
+Now
+lwthemeNeedsRestart
+.
+accesskey
+=
+R
 popupWarning
 =
 %
