Bug 590841: tweak header string for accelerated windows string in about:support, rs=joe, a=blocking
UltraBlame original commit: ad48f7d7d4fd76ffac92c7c38df3838b18eb885a

--- a/toolkit/locales/en-US/chrome/global/aboutSupport.properties
+++ b/toolkit/locales/en-US/chrome/global/aboutSupport.properties
@@ -55,16 +55,52 @@ term
 like
 #
 "
-graphics
-acceleration
-.
+Graphics
+-
+accelerated
+Windows
 "
-acceleratedLayersEnabled
+.
+It
+describes
+a
+number
+of
+windows
+e
+.
+g
+.
+:
+#
+"
+GPU
+Accelerated
+Windows
+:
+2
+/
+2
+(
+Direct3D
+9
+)
+"
+#
+"
+GPU
+Accelerated
+Windows
+:
+0
+/
+2
+"
+acceleratedWindows
 =
 GPU
 Accelerated
-Layers
-Enabled
+Windows
 direct2DEnabled
 =
 Direct2D
